--- a/requirements.txt
+++ b/requirements.txt
@@ -31,24 +31,26 @@ click @ file:///C:/b/abs_bbg7qqz4dk/croot/click_1754477951021/work
 cloudpickle @ file:///C:/b/abs_fdydcrc9_2/croot/cloudpickle_1751309451995/work
 colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1729036581634/work
 comm @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/comm_1729042212228/work
-contourpy==1.3.3
+contourpy @ file:///C:/b/abs_f2u2o_8s9g/croot/contourpy_1732540071787/work
 cookiecutter @ file:///C:/b/abs_6ak0be77em/croot/cookiecutter_1751313989831/work
 cryptography @ file:///C:/miniconda3/conda-bld/cryptography-split_1760106330961/work
-cycler==0.12.1
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 debugpy @ file:///C:/miniconda3/conda-bld/debugpy_1757067171670/work
 decorator @ file:///C:/miniconda3/conda-bld/decorator_1757341249916/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
 Deprecated @ file:///C:/miniconda3/conda-bld/deprecated_1758530960500/work
 diff-match-patch @ file:///Users/ktietz/demo/mc3/conda-bld/diff-match-patch_1630511840874/work
 dill @ file:///C:/miniconda3/conda-bld/dill_1760096877594/work
+dj-database-url==3.0.1
 Django==5.2.7
 docstring-to-markdown @ file:///C:/miniconda3/conda-bld/docstring-to-markdown_1758626863507/work
 docutils @ file:///C:/b/abs_8d42id67ov/croot/docutils_1744664123685/work
 executing @ file:///C:/miniconda3/conda-bld/executing_1757061255268/work
 fastjsonschema @ file:///C:/Users/dev-admin/buildout/croot/python-fastjsonschema_1735843385211/work
 flake8 @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/flake8_1729054074515/work
-fonttools==4.60.1
+fonttools @ file:///C:/miniconda3/conda-bld/fonttools_1759754890124/work
 frozenlist @ file:///C:/miniconda3/conda-bld/frozenlist_1761062034652/work
+gunicorn==23.0.0
 h11 @ file:///C:/b/abs_224rqu7kel/croot/h11_1748442031959/work
 httpcore @ file:///C:/b/abs_25m7_xthp6/croot/httpcore_1748526065845/work
 httpx @ file:///C:/miniconda3/conda-bld/httpx_1760447475275/work
@@ -85,11 +87,11 @@ jupyterlab_pygments @ file:///C:/b/abs_d5alfet8m6/croot/jupyterlab_pygments_1741
 jupyterlab_server @ file:///C:/Users/dev-admin/buildout/croot/jupyterlab_server_1742592635158/work
 jupyterlab_widgets @ file:///C:/b/abs_6566by8dag/croot/jupyterlab_widgets_1752066574111/work
 keyring @ file:///C:/b/abs_596d81ux2c/croot/keyring_1745484709696/work
-kiwisolver==1.4.9
+kiwisolver @ file:///C:/b/abs_faf90xet7a/croot/kiwisolver_1737040915779/work
 lsprotocol @ file:///C:/miniconda3/conda-bld/lsprotocol_1759828550184/work/packages/python
 markdown-it-py @ file:///C:/b/abs_3espcrdl35/croot/markdown-it-py_1756299213703/work
 MarkupSafe @ file:///C:/b/abs_a0ma7ge0jc/croot/markupsafe_1738584052792/work
-matplotlib==3.10.7
+matplotlib==3.10.6
 matplotlib-inline @ file:///C:/miniconda3/conda-bld/matplotlib-inline_1758520260078/work
 mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
 mdurl @ file:///C:/miniconda3/conda-bld/mdurl_1758552277768/work
@@ -117,7 +119,7 @@ parso @ file:///C:/b/abs_834b4mj92b/croot/parso_1733963322289/work
 pathspec @ file:///C:/b/abs_6cebug4l2i/croot/pathspec_1753774761851/work
 pexpect @ file:///C:/b/abs_46m6xwp4u8/croot/pexpect_1750072615005/work
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pillow==12.0.0
+pillow @ file:///C:/b/abs_b06nvnir5m/croot/pillow_1752524543576/work
 platformdirs @ file:///C:/b/abs_ddh15014or/croot/platformdirs_1744273060660/work
 plotly==6.3.1
 pluggy @ file:///C:/b/abs_dfec_m79vo/croot/pluggy_1733170145382/work
@@ -139,7 +141,7 @@ pylint @ file:///C:/b/abs_6dheb4r34g/croot/pylint_1756473040471/work
 pylint-venv @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pylint-venv_1729062196487/work
 pyls-spyder==0.4.0
 PyNaCl @ file:///C:/miniconda3/conda-bld/pynacl_1758892069004/work
-pyparsing==3.2.5
+pyparsing @ file:///C:/Users/dev-admin/buildout/croot/pyparsing_1735861809022/work
 PyQt6==6.9.1
 PyQt6-WebEngine==6.9.0
 PyQt6_sip @ file:///C:/miniconda3/conda-bld/pyqt-split_1757511039072/work/pyqt_sip
@@ -218,6 +220,7 @@ webencodings @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/web
 websocket-client @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/websocket-client_1729041881346/work
 whatthepatch @ file:///C:/miniconda3/conda-bld/whatthepatch_1758276663508/work
 wheel==0.45.1
+whitenoise==6.11.0
 widgetsnbextension @ file:///C:/Users/dev-admin/buildout/croot/widgetsnbextension_1735847225457/work
 win_inet_pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1729038644686/work
 winloop @ file:///C:/b/abs_5cztoadwza/croot/winloop_1756285630733/work
